Fix overflowing layouts

--- a/flexlayout-addon/src/main/resources/org/vaadin/teemusa/flexlayout/flexlayout.css
+++ b/flexlayout-addon/src/main/resources/org/vaadin/teemusa/flexlayout/flexlayout.css
@@ -1,3 +1,4 @@
 .flexlayout {
 	display: flex;
+	overflow: auto;
 }
